Fixing oversized justin on mobile

--- a/css/developer.css
+++ b/css/developer.css
@@ -403,7 +403,7 @@ footer p{
 @media (max-width: 790px){
 	#developerBanner h1 {
 		font-size: 80px;
-		padding: 0 105px
+		width: 215px;
 	}
 
 	.projectWrapper{
